# Multimodal-RAG

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  reference.md
docs/: evaluation-rubric.md  v1-prototype-design.md
frontend/: index.html  package.json  tsconfig.app.json
issues/: 002-scaffold-frontend-test-baseline.md  003-add-typed-runtime-settings-and-local-path-conventions.md  004-define-core-domain-contracts.md  005-create-sqlite-schema-and-bootstrap.md  006-implement-document-discovery-from-database.md  007-implement-hash-based-ingestion-status.md  008-extract-pdf-pages-and-text-source-elements.md  009-extract-tables-with-whole-table-source-elements.md  010-create-row-level-table-helper-chunks.md  011-extract-figure-records-and-preview-artifacts.md  012-add-figure-caption-generation-with-cache.md  013-serve-source-previews-through-backend.md  014-build-sqlite-fts-keyword-indexing.md  015-build-chroma-vector-indexing.md  016-implement-hybrid-retrieval-with-rrf.md  017-add-local-reranker-adapter.md  018-expose-retrieve-inspection-endpoint.md  019-add-openai-cache-infrastructure.md  020-implement-query-decomposition-contract.md  021-implement-evidence-verification-contract.md  022-implement-answer-generation-contract.md  023-enforce-deterministic-not-found-behavior.md  024-enforce-deterministic-partial-behavior.md  025-implement-ask-orchestration.md  026-store-ask-traces.md  027-render-document-ingestion-status-ui.md  028-render-technician-question-flow.md  029-render-structured-answer-states.md  030-render-citations-and-source-previews.md  prd.md  (+5 more)
(+76 files in other folders)
